Added for aig db user disable

--- a/.env
+++ b/.env
@@ -1,6 +1,14 @@
-USER_POOL_ID=
+USER_POOL_ID=""
 AWS_REGION="ap-south-1"
-AWS_ACCESS_KEY=
-AWS_SECRET_KEY=
+AWS_ACCESS_KEY=""
+AWS_SECRET_KEY=""
 USER_LOOP_LIMIT=60
 DAYS_INACTIVE=30
+MONGO_URI=""
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
+NODE_ENV='dev'
+TO_EMAILS=''
+FROM_EMAIL=''
