--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.1672.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "mongo": "^0.1.0",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
